--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
-    <div class ="sample">
+    <div class = frex>
+      <div class ="sample"></div>
+      <div class ="samplee"></div>    
       
     </div>
   </body>
