--- a/index.html
+++ b/index.html
@@ -143,10 +143,22 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
+      <div class="top">
+        <div class="a">
+          <img
+            src="hana.jpg"
+            alt="花の束が入った入れ物が並んでいる"
+            width="90%"
+            height="auto"
+          />
+
+        </div>
+      </div>
     <div class = frex>
       <div class ="sample"></div>
-      <div class ="samplee"></div>    
-      
+      <div class ="sample"></div>
+      <div class ="sample"></div>    
+    </    
     </div>
   </body>
 </html>
