--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
       <div class ="sample"></div>
       <div class ="sample"></div>
       <div class ="sample"></div>    
-    </    
+    </div>
+    <div class = "middle">
+
     </div>
   </body>
 </html>
