--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
          Here is a speciallty shop for flower and green.<br>
          We have a correct knowledge　for flowers,<br>
          and we should understand flower charm.<br>
-
+        Color , Shape, Fragrance, Condition for each flowers
 
           花と緑の専門店です。
           花屋として、花について正しい知識を持ち、
