--- a/index.html
+++ b/index.html
@@ -205,7 +205,27 @@
         <img src="img/image8.png">
       </div>
     </div>
-
+    <div class="time_top">
+      <table>
+        <tbody>
+            <tr>
+              <td class="time" rowspan="3">OPEN TIME</td>
+              <td>WEEKDAY
+              </td>
+              <td>11:00~20:00</td>
+            </tr>
+            <tr>
+              <td>SATURDAY</td>
+              <td>9:00〜18:00</td>
+            </tr>
+            <tr>
+              <td >SUNDAY</td>
+              <td>9:00〜18:00</td>
+            </tr>
+        </tbody>
+      </table>
+    
+    </div>
 
   </body>
 </html>
