--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
       </div>
     </div>
     <div class="time_top">
+      <div class="time_schedule">
+        <span>Time</span>
+      </div>
       <table>
         <tbody>
             <tr>
