--- a/index.html
+++ b/index.html
@@ -189,9 +189,11 @@
       </ul>
     </div>
     <div class = "middle">
-      <div class="middle_under">
+      <div class="middle_first">
       </div>
-      <div>aaaaaa</div>
+      <div class="middle_second">
+        
+      </div>
     </div>
     <div class="access">
       <div class="access_under">
