--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
 <p>aaaaaa</p>
       </div>
     </div>
+
+    <div class="news">
+      <span>NEWS</span>
+      <div></div>
+    </div>
     <div class="access">
       <div class="access_under">
         <span>Access</span>
