--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
 
     <div class="news">
       <span>NEWS</span>
-      <div></div>
+      <div class="news_under"></div>
+      <div class="news_under"></div>
+      <div class="news_under"></div>
     </div>
     <div class="access">
       <div class="access_under">
@@ -243,3 +245,4 @@
 
   </body>
 </html>
+
