--- a/index.html
+++ b/index.html
@@ -210,12 +210,27 @@
       <div class="access_under">
         <span>Access</span>
       </div>
-      <div class="access_address">
-        東京都中目黒３丁目２ー1<br>
-        SUNBULDING 1F
-      </div>
-      <div class="access_img">
-        <img src="img/image8.png">
+      <div class="access_container">
+        <div class="access_under">
+          <div class="access_address">
+            東京都中目黒３丁目２ー1<br>
+            SUNBULDING 1F
+          </div>
+          <div class="access_img">
+            <img src="img/image8.png">
+          </div>
+        </div>
+  
+        <div class="access_under">
+          <div class="access_address">
+            東京都中目黒３丁目２ー1<br>
+            SUNBULDING 1F
+          </div>
+          <div class="access_img">
+            <img src="img/image8.png">
+          </div>
+        </div>
+
       </div>
     </div>
     <div class="time_top">
