--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
       </div>
       <div class="access_container">
         <div class="access_under">
+          <div>中目黒店</div>
           <div class="access_address">
             東京都中目黒３丁目２ー1<br>
             SUNBULDING 1F
