--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
         </div>
   
         <div class="access_under">
+          <div>中目黒店</div>
           <div class="access_address">
             東京都中目黒３丁目２ー1<br>
             SUNBULDING 1F
@@ -231,6 +232,17 @@
             <img src="img/image8.png">
           </div>
         </div>
+        <div class="access_under">
+          <div>中目黒店</div>
+          <div class="access_address">
+            東京都中目黒３丁目２ー1<br>
+            SUNBULDING 1F
+          </div>
+          <div class="access_img">
+            <img src="img/image8.png">
+          </div>
+        </div>
+       
 
       </div>
     </div>
