--- a/index.html
+++ b/index.html
@@ -199,13 +199,27 @@
 <p>aaaaaa</p>
       </div>
     </div>
-
+<div>
+  <div class="news_container">
     <div class="news">
       <span>NEWS</span>
-      <div class="news_under"></div>
-      <div class="news_under"></div>
-      <div class="news_under"></div>
     </div>
+    <div class="news_under">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="news_under">
+      <div></div>
+      <div></div>
+    </div>
+    <div class="news_under">
+      <div></div>
+      <div></div>
+    </div>
+
+  </div>
+</div>
+    
     <div class="access">
       <div class="access_under">
         <span>Access</span>
