--- a/index.html
+++ b/index.html
@@ -205,8 +205,12 @@
       <span>NEWS</span>
     </div>
     <div class="news_under">
-      <div></div>
-      <div></div>
+      <div>
+        <img src="">
+      </div>
+      <div>
+        <span>aaaaaaa</span>
+      </div>
     </div>
     <div class="news_under">
       <div></div>
