--- a/index.html
+++ b/index.html
@@ -287,10 +287,17 @@
         </tbody>
       </table>
     
+
+
+
+
+
+
+
     </div>
     <div class="footer">
      <div class="copyright">
-       
+株式会社　aaaa
      </div>
     </div>
 
