--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
       <span>NEWS</span>
     </div>
     <div class="news_under">
-      <div>
-        <img src="">
+      <div class="news_img">
+        <img src="img/image1.png">
       </div>
       <div>
         <span>aaaaaaa</span>
