--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
         <img src="img/image1.png">
       </div>
       <div>
-        <span>aaaaaaa</span>
+        <div class="date">2020.10.20</div>
+        <div class="description">ssssssss</div>
       </div>
     </div>
     <div class="news_under">
