--- a/index.html
+++ b/index.html
@@ -221,15 +221,6 @@
       <div></div>
       <div></div>
     </div>
-
-
-
-
-
-
-
-
-    
   </div>
 </div>
     
@@ -299,7 +290,17 @@
     </div>
     <div class="footer">
      <div class="copyright">
-株式会社　aaaa
+       株式会社　aaaa
+     </div>
+     <div>
+       <ul>
+         <li>HOME</li>
+         <li>ABOUT</li>
+         <li>ACCESS</li>
+         <li>BRIDAL</li>
+         <li>ONLINESHOP</li>
+         <li></li>
+       </ul>
      </div>
     </div>
 
