--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
      <div class="copyright">
        株式会社　aaaa
      </div>
-     <div>
+     <div class="footer_list">
        <ul>
          <li>HOME</li>
          <li>ABOUT</li>
