--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     </style>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <script type="text/javascript" src="index.js"></script>
   </head>
   <body>
     <div class="menu">
@@ -152,7 +153,7 @@
         <li>ONLINE SHOP</li>
       </ul>
     </div>
-      <div class="top">
+      <div class="top" id="a01">
         <div class="a">
           <img
             src="hana.jpg"
@@ -290,6 +291,10 @@
       </table>
 
     </div>
+    <div class="float">
+     <a href="#a01">aaa</a>
+
+    </div>
     <div class="footer">
      <div class="copyright">
        株式会社　aaaa
@@ -304,14 +309,6 @@
        </ul>
      </div>
     </div>
-
-
-
-
-
-
-
-
   </body>
 </html>
 
