--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </style>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <script type="text/javascript" src="index.js"></script>
+    <!--<script type="text/javascript" src="index.js"></script>-->
   </head>
   <body>
     <div class="menu">
@@ -291,9 +291,7 @@
       </table>
 
     </div>
-    <div class="float">
-     <a href="#a01">aaa</a>
-    </div>
+    <div id="js-scroll-fadein" class="js-scroll-fadein arrow"></div>
     <div class="aaa">
       aaaaaa
     </div>
