--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </style>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <!--<script type="text/javascript" src="index.js"></script>-->
+    
   </head>
   <body>
     <div class="menu">
@@ -309,6 +309,7 @@
        </ul>
      </div>
     </div>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
 
