--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
          <li>ONLINESHOP</li>
        </ul>
      </div>
+     <div></div>
     </div>
     <script type="text/javascript" src="index.js"></script>
   </body>
