--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
   <body>
     <div class="menu">
       <ul class="menu_under">
-        <li>HOME</li>
+        <li>
+          <a href="">HOME</a></li>
         <li>ABOUT</li>
         <li>ACCESS</li>
         <li>BRIDAL</li>
@@ -315,7 +316,7 @@
 
 
 
-     
+
     </div>
     <script type="text/javascript" src="index.js"></script>
   </body>
