--- a/index.html
+++ b/index.html
@@ -147,11 +147,32 @@
     <div class="menu">
       <ul class="menu_under">
         <li>
-          <a href="">HOME</a></li>
-        <li>ABOUT</li>
-        <li>ACCESS</li>
-        <li>BRIDAL</li>
-        <li>ONLINE SHOP</li>
+          <a href="#">HOME</a>
+        </li>
+        <li>
+          <a href="#">ABOUT</a>
+        </li>
+　　　　　<li class="sidebar-dropdown"><a href="#"><span>STORE</span></a>
+          <div class="sidebar-submenu">
+            <ul>
+              <li class="">
+                <a href="#">NAKAMEGURO</a>
+              </li>
+              <li class="">
+                <a href="#">JIYUGAOKA</a>
+              </li>
+              <li class="">
+                <a href="#">DAIKANYAMA</a>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <a href="#">BRIDAL</a>
+        </li>
+        <li>
+          <a href="#">ONLINE SHOP</a>
+        </li>
       </ul>
     </div>
       <div class="top" id="a01">
@@ -318,6 +339,8 @@
 
 
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
