--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
     </style>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    
   </head>
   <body>
     <div class="menu">
@@ -152,7 +151,7 @@
         <li>
           <a href="#">ABOUT</a>
         </li>
-　　　　　<li class="sidebar-dropdown"><a href="#"><span>STORE</span></a>
+　　　　　<li class="sidebar-dropdown"><a href="#">STORE</a>
             <ul>
               <li class="">
                 <a href="#">NAKAMEGURO</a>
