--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="menu">
       <ul class="menu_under">
         <li>
-          <a href="#">HOME</a>
+          <a href="/abc.to/">HOME</a>
         </li>
         <li>
           <a href="#">ABOUT</a>
