--- a/index.html
+++ b/index.html
@@ -198,9 +198,14 @@
            </div>
          </div>
       </div>
-    <div class = frex>
-      <ul>
-        <li><img src="img/image1.png"></li>
+    <div class ="frex">
+      <ul class="flower_container">
+        <li>
+          <img src="img/image1.png">
+          <dl class="details">
+            <dd>aaaaa</dd>
+          </dl>
+        </li>
         <li><img src="img/image2.png"></li>
         <li><img src="img/image3.png"></li>
         <li><img src="img/image4.png"></li>
