--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class ="frex">
       <ul class="flower_container">
         <li>
-          <img src="img/image1.png">
+          <img class="vvv" src="img/image1.png">
           <dl class="details">
             <dd>aaaaa</dd>
           </dl>
@@ -330,7 +330,8 @@
          <li>HOME</li>
          <li>ABOUT</li>
          <li>ACCESS</li>
-         <li>BRIDAL</li>
+         <li>BRIDAL<br>
+        ssssssssss</li>
          <li>ONLINESHOP</li>
        </ul>
      </div>
