--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
             width="90%"
             height="auto"
           />
-
         </div>
       </div>
       <div class="a">
@@ -201,16 +200,43 @@
     <div class ="frex">
       <ul class="flower_container">
         <li>
-          <img class="vvv" src="img/image1.png">
+          <img src="img/image1.png">
+          <dl class="details">
+            <dd>We have a lot of kind of flowers from farm everyday.You can have a lot of choise.</dd>
+          </dl>
+        </li>
+        <li>
+          <img src="img/image2.png">
+          <dl class="details">
+            <dd>ROSE</dd>
+            <dd></dd>
+          </dl>
+        </li>
+        <li>
+          <img src="img/image3.png">
           <dl class="details">
             <dd>aaaaa</dd>
           </dl>
         </li>
-        <li><img src="img/image2.png"></li>
-        <li><img src="img/image3.png"></li>
-        <li><img src="img/image4.png"></li>
-        <li><img src="img/image5.png"></li>
-        <li><img src="img/image6.png"></li>
+        <li>
+          <img src="img/image4.png">
+          <dl class="details">
+            <dd>aaaaa</dd>
+          </dl>
+        </li>
+        <li>
+          <img src="img/image5.png">
+          <dl class="details">
+            <dd>We can make the bouquet for any situation.<br>
+            For wedding as well.</dd>
+          </dl>
+        </li>
+        <li>
+          <img src="img/image6.png">
+          <dl class="details">
+            <dd>aaaaa</dd>
+          </dl>
+        </li>
       </ul>
     </div>
     <div class = "middle">
